# LittleWeatherApp

./: .gitignore  CMakeLists.txt  Makefile  dev_update.sh
src/: main.cpp  parser.cpp  parser.h  settings.cpp  settings.h  ui.cpp
src/providers/: IProvider.h  providerOpenMeteo.cpp  providerOpenMeteo.h  providers.cpp  providers.h
